--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,14 @@
 <html>
-    <body>
-    	<div class="navbar">
+
+<body>
+    <div class="navbar">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
-		  </div>
-		  <h1>Home page</h1>
-      <script src="/public/assets/js/shared.js"></script>
-      <script src="/public/assets/js/home.js"></script>
-    </body>
+    </div>
+    <h1 class="home">Home page</h1>
+    <script src="/public/assets/js/shared.js"></script>
+    <script src="/public/assets/js/home.js"></script>
+</body>
+
 </html>
