--- a/public/contact.html
+++ b/public/contact.html
@@ -6,7 +6,7 @@
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
     </div>
-    <h1 class="contacts">Contact page</h1>
+    <h1 class="contacts">Contacts page</h1>
     <script src="/public/assets/js/shared.js"></script>
     <script src="/public/assets/js/contact.js"></script>
 </body>
