--- a/public/about.html
+++ b/public/about.html
@@ -1,5 +1,10 @@
 <html>
-    <body>
+
+<head>
+    <link rel="stylesheet" href="/public/assets/styles.css">
+</head>
+
+<body>
     <div class="navbar">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -7,8 +12,8 @@
     </div>
     <h1>About page</h1>
 
-        <script src="/public/assets/js/shared.js"></script>
-        <script src="/public/assets/js/about.js"></script>
-    </body>
-</html>
+    <script src="/public/assets/js/shared.js"></script>
+    <script src="/public/assets/js/about.js"></script>
+</body>
 
+</html>
