--- a/public/contact.html
+++ b/public/contact.html
@@ -1,5 +1,9 @@
 <html>
 
+<head>
+    <link rel="stylesheet" href="/public/assets/styles.css">
+</head>
+
 <body>
     <div class="navbar">
         <a href="index.html">Home</a>
@@ -7,8 +11,8 @@
         <a href="contact.html">Contact</a>
     </div>
     <h1 class="contacts">Contacts page</h1>
-    <script src="/public/assets/js/shared.js"></script>
-    <script src="/public/assets/js/contact.js"></script>
+    <script src="/public/assets/shared.js"></script>
+    <script src="/public/assets/contact.js"></script>
 </body>
 
 </html>
