--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,9 @@
 <html>
 
+<head>
+    <link rel="stylesheet" href="/public/assets/styles.css">
+</head>
+
 <body>
     <div class="navbar">
         <a href="index.html">Home</a>
