--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,11 @@
         <a href="contact.html">Contact</a>
     </div>
     <h1 class="home">Home page</h1>
-    <script src="/public/assets/js/shared.js"></script>
-    <script src="/public/assets/js/home.js"></script>
+
+    <button id="b">Press</button>
+
+    <script src="/public/assets/shared.js"></script>
+    <script src="/public/assets/home.js"></script>
 </body>
 
 </html>
